--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </style>
 <title>all url's list(internal)</title>
 <link rel="icon" href="https://codehs.com/uploads/958904a074347979b04e0d26b4970453" type="image/x-icon">
+<b>please hold… changes are underway and things are breaking(or already have broken) in some places</b><hr>
 <b>you can use any device(including school devices) to load:</b><br>
 <a href = "./">homepage</a><br>
 <a href = "./all_urls.html">all url's list (internal)</a><br>
